# 305

hello_world/: Cargo.toml
hello_world/src/: greetings.rs  main.rs  must_know_2.rs
hello_world/src/greetings/: english.rs
hello_world/src/how_you_hold_data_for_operations/: derived.rs
hello_world/src/how_you_hold_data_for_operations/derived/: error_handling.rs  functions.rs  pointers.rs  user_defined.rs  user_defined_with_lifetimes.rs
hello_world/src/how_you_hold_data_for_operations/primitives/: scalar.rs
my_attribute_proc_macros/: Cargo.toml
my_attribute_proc_macros/src/: lib.rs
my_functional_proc_macros/: Cargo.toml
my_functional_proc_macros/src/: lib.rs
rect_shape/rect_shape_derive/: Cargo.toml
rect_shape/rect_shape_derive/src/: lib.rs
